18_reverse_str/grade.txt
Grading at Mon Jul 20 21:24:22 UTC 2020
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:7:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if (*str = '\0')
   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
